Fix to stop animation cutting off early

--- a/Cinehive/Cinehive/Content/CustomCinehive.css
+++ b/Cinehive/Cinehive/Content/CustomCinehive.css
@@ -316,15 +316,15 @@ body {
 
 
 #bar {
-    height: 250px;
+    height: 368px;
     background: #000000 0px 0px url('https://i.ibb.co/jRYRnwn/colouredfilmreel.jpg') repeat-x;
     -webkit-animation: scroll 10s linear infinite;
-    animation: scroll 10s linear infinite;
+    animation: scroll 100s linear infinite;
 }
 
 @-webkit-keyframes scroll {
     from {
-        background-position: 320px 0;
+        background-position: 7103px 0;
     }
 
     to {
@@ -334,7 +334,7 @@ body {
 
 @keyframes scroll {
     from {
-        background-position: 320px 0;
+        background-position: 7103px 0;
     }
 
     to {
